welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:6: error: not found: value Colour
    	if(getCouleurSol() != Colour.green){
                              ^SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
    if(!estFaceMur()){
    ^